refactor swagger document
